# scoop-uv

./: .all-contributorsrc  .clippy.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MEMORY.md  Makefile  PLAN.md  README.md  SECURITY.md  build.rs  cliff.toml  context7.json  deny.toml  llms-full.txt  llms.txt  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: mutants.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  coverage.yml  docker-build.yml  docs.yml  fuzz.yml  integration-test.yml  msrv-check.yml  mutants.yml  release-plz.yml  security.yml
assets/: README.md
benches/: parsing.rs  path_lookup.rs  validation.rs
dev/bench/: data.js
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/scripts/: bashrc.sh  config.fish  entrypoint.sh  zshrc.sh
docs/: CODE_QUALITY.md  DEVELOPMENT.md  TESTING.md  book.toml  commands.md  doctor-design.md
docs/po/: ko.po
docs/src/: README.md  SUMMARY.md  api.md  examples.md  faq.md  installation.md  llms.md  python-management.md  quick-start.md  shell-integration.md
docs/src/commands/: README.md  clone.md  completions.md  create.md  diff.md  doctor.md  export.md  gc.md  import.md  info.md  init.md  install.md  lang.md  list.md  man.md  migrate.md  prune.md  remove.md  run.md  self.md  shell.md  status.md  sync.md  uninstall.md  use.md  verify.md  which.md
docs/src/development/: architecture.md  code-quality.md  contributing.md  docs-translation.md  testing.md  translation.md
docs/superpowers/plans/: 2026-07-15-split-doctor.md
docs/superpowers/specs/: 2026-07-15-split-doctor-design.md
docs/theme/: head.hbs
examples/: README.md  basic_workflow.sh  ci_github_actions.yml  migration_from_pyenv.sh  multi_project_setup.sh
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: fuzz_env_name.rs  fuzz_python_version.rs  fuzz_uv_version_parse.rs
locales/: app.yml
src/: config.rs  error.rs  i18n.rs  lib.rs  main.rs  paths.rs  test_utils.rs  validate.rs
src/cli/: mod.rs
src/cli/commands/: activate.rs  clone.rs  completions.rs  create.rs  deactivate.rs  doctor.rs  duration.rs  export.rs  gc.rs  import.rs  info.rs  init.rs  install.rs  lang.rs  list.rs  man.rs  migrate.rs  mod.rs  prune.rs  remove.rs  resolve.rs  run.rs  self_update.rs  shell.rs  status.rs  sync.rs  uninstall.rs  use_env.rs  verify.rs  which.rs
src/cli/commands/diff/: compute.rs  enumerator.rs  mod.rs  render.rs  tests.rs  types.rs
src/cli/commands/gc/: mod.rs  tests.rs
src/cli/commands/migrate/: batch.rs  conflict.rs  list.rs  mod.rs  scan.rs  single.rs  types.rs
src/cli/commands/use_env/: mod.rs  normal.rs  output.rs  symlink.rs  system.rs  unset.rs
src/core/: doctor.rs  export_schema.rs  manifest.rs  metadata.rs  mod.rs  version.rs  virtualenv.rs
src/core/doctor/: engine.rs  mod.rs  types.rs
src/core/doctor/checks/: home.rs  legacy.rs  mod.rs  shell.rs  symlink.rs  test_support.rs  uv.rs  version.rs  virtualenv.rs
src/core/migrate/: common.rs  conda.rs  discovery.rs  extractor.rs  migrator.rs  mod.rs  source.rs  venvwrapper.rs
src/core/virtualenv/: mod.rs  tests.rs
src/error/: code.rs  display.rs  exit.rs  migrate.rs  mod.rs  suggestion.rs
src/output/: deprecation.rs  json.rs  mod.rs  spinner.rs  time.rs
src/shell/: bash.rs  common.rs  fish.rs  mod.rs  powershell.rs  zsh.rs
src/uv/: client.rs  mod.rs  version.rs
tests/: cli.rs  i18n_completeness.rs
tests/common/: mod.rs
tests/snapshots/: cli__snapshots__error_format.snap  cli__snapshots__help_structure.snap  cli__snapshots__init_bash_structure.snap  cli__snapshots__init_zsh_structure.snap  cli__snapshots__subcommands_present.snap
