[package]
name = "scoop"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Hanyul"]
description = "Scoop up your Python environments — pyenv-style workflow powered by uv"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanyul/scoop"
keywords = ["python", "virtualenv", "uv", "pyenv", "environment"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "string", "wrap_help"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
owo-colors = "4.0"
console = "0.15"
indicatif = "0.18"
dialoguer = "0.12"

# Utilities
dirs = "6.0"
which = "6.0"
regex = "1.11"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde", "std", "clock"], default-features = false }

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_mangen = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[profile.release]
lto = true
strip = true
codegen-units = 1
